--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Somia Asim — GIS/RS & Data Analyst</title>
   <meta name="description" content="Somia Asim | GIS/RS & Data Analyst — remote sensing, urban change, flood analysis, risk mapping."/>
-  <link rel="icon" href="assets/favicon.png"/>
+  <link rel="icon" href="assets/fevicon.png"/>
   <link rel="stylesheet" href="assets/site.css">
 </head>
 
 <body>
-<!-- TOP HEADER (pfp + name/role + tabs) -->
+<!-- TOP HEADER -->
 <header class="topbar">
   <div class="nav-wrap">
     <div class="brandpack">
-      <img class="mini-pfp" src="assets/Somia.jpg" alt="Somia Asim"/>
+      <!-- favicon in header -->
+      <img class="brand-icon" src="assets/fevicon.png" alt="SA"/>
       <div class="brand-meta">
-        <div class="brand-name">Somia Asim</div>
+        <div class="brand-name">SOMIA ASIM</div>
         <div class="brand-role">Research Associate</div>
       </div>
     </div>
@@ -32,42 +33,48 @@
   </div>
 </header>
 
-<!-- HERO / ABOUT -->
-<section id="about" class="hero fade-in">
-  <h1 class="title duo">Hi, I’m <span>Somia</span>.</h1>
-  <p class="subtitle">GIS/RS &amp; Data Analyst focused on urban change, flood exposure, and policy-driven spatial insights.</p>
+<!-- ABOUT (default visible) -->
+<section id="about" class="section-page show">
+  <section class="hero fade-in">
+    <h1 class="title duo">Hi, I’m <span>Somia</span>.</h1>
 
-  <p class="techline">ArcGIS • QGIS • Google Earth Engine • Python • R • PostgreSQL</p>
-
-  <div class="tags">
-    <span class="tag">Urban Change</span>
-    <span class="tag">Flood Analysis</span>
-    <span class="tag">Risk Mapping</span>
-    <span class="tag">Cartography</span>
-    <span class="tag">Automation / Dashboards</span>
-  </div>
-
-  <div class="about-grid">
-    <div class="about-left">
-      <img class="pfp" src="assets/Somia.jpg" alt="Somia Asim portrait" />
-      <div class="contact-box">
-        <strong>Contact</strong>
-        <a href="mailto:somiaasim26@gmail.com">somiaasim26@gmail.com</a>
-        <a href="https://www.linkedin.com/in/somia-asim-35688617a" target="_blank">LinkedIn</a>
+    <!-- glass box under the name -->
+    <div class="intro-glass glass fade-in">
+      <p class="subtitle">
+        GIS/RS &amp; Data Analyst focused on urban change, flood exposure, and policy-driven spatial insights.
+      </p>
+      <p class="techline">ArcGIS • QGIS • Google Earth Engine • Python • R • PostgreSQL</p>
+      <div class="tags">
+        <span class="tag">Urban Change</span>
+        <span class="tag">Flood Analysis</span>
+        <span class="tag">Risk Mapping</span>
+        <span class="tag">Cartography</span>
+        <span class="tag">Automation / Dashboards</span>
       </div>
     </div>
 
-    <div class="about-right glass">
-      <h2 class="section-title duo">About Me</h2>
-      <p>I’m a GIS/RS and Data Analyst with a strong academic background in Geography. My geospatial journey began during my undergraduate studies at the University of the Punjab, where I developed a lasting interest in spatial analysis, cartography, and environmental data interpretation.</p>
-      <p>I started my professional career at WWF-Pakistan, progressing through roles as GIS Intern, GIS Associate, and GIS Officer. Currently, at the Lahore University of Management Sciences (LUMS), I’ve served as a Research Assistant and now as a Research Associate, contributing to data-driven projects at the intersection of environment, policy, and urban systems.</p>
-      <p>My expertise spans spatial data management, statistical and geospatial analysis, and ML for Earth observation using ArcGIS, QGIS, Google Earth Engine, Python, R, and PostgreSQL. I’m passionate about automating analytical workflows, building dashboards, and visualizing complex datasets.</p>
+    <div class="about-grid">
+      <div class="about-left">
+        <img class="pfp" src="assets/Somia.jpg" alt="Somia Asim portrait" />
+        <div class="contact-box glass">
+          <strong>Contact</strong>
+          <a href="mailto:somiaasim26@gmail.com">somiaasim26@gmail.com</a>
+          <a href="https://www.linkedin.com/in/somia-asim-35688617a" target="_blank">LinkedIn</a>
+        </div>
+      </div>
+
+      <div class="about-right glass">
+        <h2 class="section-title duo">About Me</h2>
+        <p>I’m a GIS/RS and Data Analyst with a strong academic background in Geography. My geospatial journey began during my undergraduate studies at the University of the Punjab, where I developed a lasting interest in spatial analysis, cartography, and environmental data interpretation.</p>
+        <p>I started my professional career at WWF-Pakistan, progressing through roles as GIS Intern, GIS Associate, and GIS Officer. Currently, at the Lahore University of Management Sciences (LUMS), I’ve served as a Research Assistant and now as a Research Associate, contributing to data-driven projects at the intersection of environment, policy, and urban systems.</p>
+        <p>My expertise spans spatial data management, statistical and geospatial analysis, and ML for Earth observation using ArcGIS, QGIS, Google Earth Engine, Python, R, and PostgreSQL. I’m passionate about automating analytical workflows, building dashboards, and visualizing complex datasets.</p>
+      </div>
     </div>
-  </div>
+  </section>
 </section>
 
 <!-- EXPERIENCE -->
-<section id="experience" class="section">
+<section id="experience" class="section section-page">
   <h2 class="section-title duo fade-in">Experience <span class="years-chip">2+ years</span></h2>
 
   <div class="exp-grid">
@@ -117,10 +124,10 @@
     </article>
   </div>
 
-  <!-- CORE TECHNOLOGIES (compact card) -->
+  <!-- CORE TECHNOLOGIES -->
   <div class="tech-stack fade-in">
     <div class="tech-card glass">
-      <h3 class="section-subtitle duo">Core Technologies</h3>
+      <h3 class="section-subtitle duo heading-strong">Core Technologies</h3>
       <p class="muted">Tools and platforms I use to deliver reproducible geospatial and data science work.</p>
       <div class="skills-grid">
         <img src="assets/logo/python.svg" alt="Python" class="skill-icon">
@@ -146,18 +153,20 @@
   </div>
 </section>
 
-<!-- PLACEHOLDERS FOR NAV LINKS -->
-<section id="cv" class="section">
+<!-- CV -->
+<section id="cv" class="section section-page">
   <h2 class="section-title duo fade-in">CV</h2>
   <p class="muted fade-in">Add a downloadable PDF or timeline here.</p>
 </section>
 
-<section id="gallery" class="section">
+<!-- GALLERY -->
+<section id="gallery" class="section section-page">
   <h2 class="section-title duo fade-in">Gallery</h2>
   <p class="muted fade-in">A curated set of project visuals and maps.</p>
 </section>
 
-<section id="blog" class="section">
+<!-- BLOG -->
+<section id="blog" class="section section-page">
   <h2 class="section-title duo fade-in">Blog / Publications</h2>
   <p class="muted fade-in">Short write-ups, case studies, and links to publications.</p>
 </section>
@@ -165,27 +174,38 @@
 <footer>© Somia Asim</footer>
 
 <script>
-  // smooth section highlight
+  // reveal on view
+  const revealItems = document.querySelectorAll('.fade-in, .zoom-in');
+  const io = new IntersectionObserver(entries => {
+    entries.forEach(e => e.isIntersecting && e.target.classList.add('in'));
+  }, { threshold: 0.16 });
+  revealItems.forEach(el => io.observe(el));
+
+  // SPA-style section router: show only selected section
   const navLinks = document.querySelectorAll('nav a');
-  const sections = [...navLinks].map(a => document.querySelector(a.getAttribute('href')));
-  window.addEventListener('scroll', () => {
-    const y = window.scrollY + 140;
-    sections.forEach((sec, i) => {
-      if (sec && y >= sec.offsetTop && y < sec.offsetTop + sec.offsetHeight) {
-        navLinks.forEach(n => n.classList.remove('active'));
-        navLinks[i].classList.add('active');
-      }
+  const pages = document.querySelectorAll('.section-page');
+
+  function showSection(hash){
+    const id = (hash || '#about');
+    pages.forEach(sec => sec.classList.toggle('show', '#'+sec.id === id));
+    navLinks.forEach(a => a.classList.toggle('active', a.getAttribute('href') === id));
+    window.scrollTo({top:0, behavior:'instant'});
+  }
+
+  // clicks
+  navLinks.forEach(a => {
+    a.addEventListener('click', (e) => {
+      e.preventDefault();
+      const href = a.getAttribute('href');
+      history.pushState(null, '', href);
+      showSection(href);
     });
   });
 
-  // fade + zoom reveal
-  const revealItems = document.querySelectorAll('.fade-in, .zoom-in');
-  const io = new IntersectionObserver(entries => {
-    entries.forEach(e => {
-      if (e.isIntersecting) e.target.classList.add('in');
-    });
-  }, { threshold: 0.16 });
-  revealItems.forEach(el => io.observe(el));
+  // back/forward
+  window.addEventListener('popstate', () => showSection(location.hash || '#about'));
+  // initial
+  showSection(location.hash || '#about');
 </script>
 </body>
 </html>
