--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Somia Asim — Portfolio</title>
-  <link rel="icon" type="image/png" href="visuals/favicon.png"/>
+  <title>Somia Asim — Website</title>
+  <link rel="icon" type="image/png" href="assets/favicon.png"/>
   <link rel="stylesheet" href="assets/site.css"/>
   <style>
     /* quick hide for inactive tabs */
@@ -19,7 +19,7 @@
 <header class="topbar">
   <div class="nav-wrap">
     <div class="brandpack">
-      <img class="brand-icon" src="visuals/favicon.png" alt="SA"/>
+      <img class="brand-icon" src="assets/favicon.png" alt="SA"/>
       <div class="brand-meta">
         <div class="brand-name">SOMIA ASIM</div>
         <div class="brand-role">Research Associate</div>
@@ -37,10 +37,10 @@
 
 <!-- ===== ABOUT ===== -->
 <section id="about" class="tab-content active hero">
-  <h1 class="title">Hi, I’m Somia.</h1>
-  <p class="bigline">GIS/RS &amp; Data Analyst focused on urban change, flood exposure, and policy-driven spatial insights.</p>
+  <h1 class="title">Hi, I’m Somia, GIS/RS &amp; Data Analyst.</h1>
+  <p class="bigline">I analyze spatial, statistical, and environmental data to uncover insights that drive research, innovation, and sustainability.</p>
 
-  <p class="techline">ArcGIS • QGIS • Google Earth Engine • Python • R • PostgreSQL</p>
+  <p class="techline">ESRI Package • QGIS • Google Earth Engine • Python • R • PostgreSQL</p>
 
   <div class="tags">
     <span class="tag tag-urban">Urban Change</span>
