--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- ===== ABOUT ===== -->
 <section id="about" class="tab-content active hero">
-  <h1 class="title">Hi, I’m Somia, GIS/RS &amp; Data Analyst.</h1>
+  <h1 class="title">Hi, I’m Somia,<br>GIS/RS & Data Analyst.</h1>
   <p class="bigline">I analyze spatial, statistical, and environmental data to uncover insights that drive research, innovation, and sustainability.</p>
 
   <p class="techline">ESRI Package • QGIS • Google Earth Engine • Python • R • PostgreSQL</p>
