--- a/index.html
+++ b/index.html
@@ -35,13 +35,20 @@
   </div>
 </header>
 
-<!-- ===== ABOUT ===== -->
+<!-- ===== ABOUT / HERO ===== -->
 <section id="about" class="tab-content active hero">
-  <h1 class="title">Hi, I’m Somia,<br>GIS/RS & Data Analyst.</h1>
-  <p class="bigline">I analyze spatial, statistical, and environmental data to uncover insights that drive research, innovation, and sustainability.</p>
+  <!-- GLASS BOX behind the title + subtitle -->
+  <div class="hero-box glassbox lift">
+    <h1 class="title">Hi, I’m Somia,</h1>
+    <h1 class="title">GIS/RS &amp; Data Analyst.</h1>
+    <p class="subtitle bigline">
+      I analyze spatial, statistical, and environmental data to uncover insights that drive research,
+      innovation, and sustainability.
+    </p>
+  </div>
 
+  <!-- keep the rest (techline + chips + about grid) exactly as is -->
   <p class="techline">ESRI Package • QGIS • Google Earth Engine • Python • R • PostgreSQL</p>
-
   <div class="tags">
     <span class="tag tag-urban">Urban Change</span>
     <span class="tag tag-flood">Flood Analysis</span>
@@ -49,6 +56,8 @@
     <span class="tag tag-carto">Cartography</span>
     <span class="tag tag-auto">Automation / Dashboards</span>
   </div>
+  <!-- ...about-grid continues -->
+
 
   <div class="about-grid">
     <div class="about-left">
@@ -71,9 +80,13 @@
 
 <!-- ===== EXPERIENCE ===== -->
 <section id="experience" class="tab-content section">
-  <h2 class="section-title">Experience <span class="years-chip">2+ years</span></h2>
+  <div class="section-head glassbox lift">
+    <h2 class="section-title">Experience <span class="years-chip">2+ years</span></h2>
+  </div>
 
   <div class="exp-grid">
+    <!-- cards unchanged -->
+
     <article class="exp-card exp-green">
       <div class="exp-top">
         <h3>Research Associate</h3><span class="exp-dates">2024 — Present</span>
