--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <li>Authored geospatial content, training material, and manuals for organizational capacity building.</li>
       </ul>
       <div class="exp-tools">
-        <b>Tools:</b> Google Earth Engine · ArcGIS · QGIS · Mapbox · Landsat · MaxEnt · Python
+        <b>Tools:</b> Google Earth Engine · ArcGIS · QGIS · Mapbox · Landsat/Sentinel/Modis · MaxEnt · Python
       </div>
     </article>
 
@@ -141,7 +141,7 @@
   <div class="tech-stack">
     <div class="tech-card glass">
       <h3 class="section-subtitle heading-strong">Core Technologies</h3>
-      <p class="muted">Tools and platforms used to design, analyze, and visualize complex geospatial and statistical data. My workflow integrates <b>GIS</b>, <b>remote sensing</b>, and <b>data science</b> techniques to produce reproducible, scalable, and automation-ready solutions for research and environmental analysis.</p>
+      <p class="muted">Tools and platforms used to design, analyze, and visualize complex geospatial and statistical data.</p>
       <div class="skills-grid">
         <img src="assets/logo/python.svg" alt="Python">
         <img src="assets/logo/r.svg" alt="R">
