--- a/index.html
+++ b/index.html
@@ -99,8 +99,16 @@
         <li>Developed an interactive dashboard for real-time monitoring and analytics.</li>
       </ul>
       <div class="exp-tools">
-        <b>Tools:</b> Python · PostgreSQL · Streamlit · ArcGIS · Google Earth Engine
+        <b>Tools:</b>
+        <span class="chip">Python</span>
+        <span class="chip">PostgreSQL</span>
+        <span class="chip">Streamlit</span>
+        <span class="chip">ArcGIS</span>
+        <span class="chip">Google Earth Engine</span>
+        <span class="chip">QGIS</span>
+
       </div>
+
     </article>
 
     <article class="exp-card exp-blue">
@@ -114,7 +122,13 @@
         <li>Utilized <b>Mapbox</b> and <b>GIS-based routing</b> to identify disrupted road networks and accessibility issues.</li>
       </ul>
       <div class="exp-tools">
-        <b>Tools:</b> Google Earth Engine · ArcGIS · Mapbox · Python · NOAA Flood Fraction Data
+        <b>Tools:</b>
+        <span class="chip">Google Earth Engine</span>
+        <span class="chip">ArcGIS</span>
+        <span class="chip">Mapbox</span>
+        <span class="chip">NOAA Flood Fraction Data</span>
+        <span class="chip">Arcpy - Python</span>
+      
       </div>
     </article>
 
@@ -132,7 +146,13 @@
         <li>Authored geospatial content, training material, and manuals for organizational capacity building.</li>
       </ul>
       <div class="exp-tools">
-        <b>Tools:</b> Google Earth Engine · ArcGIS · QGIS · Mapbox · Landsat/Sentinel/Modis · MaxEnt · Python
+        <b>Tools:</b>
+        <span class="chip">Google Earth Engine</span>
+        <span class="chip">ArcGIS</span>
+        <span class="chip">QGIS</span>
+        <span class="chip">ArcGIS Pro</span>
+        <span class="chip">Landsat/Sentinel/Modis</span>
+        <span class="chip">MaxEnt</span>
       </div>
     </article>
 
