--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     /* quick hide for inactive tabs */
     section.tab-content { display: none; }
     section.tab-content.active { display: block; animation: fadeIn .5s ease; }
-    @keyframes fadeIn { from {opacity:30; transform:translateY(10px);} to {opacity:1; transform:translateY(0);} }
+    @keyframes fadeIn { from {opacity:.3; transform:translateY(10px);} to {opacity:1; transform:translateY(0);} }
   </style>
 </head>
 
@@ -37,7 +37,6 @@
 
 <!-- ===== ABOUT / HERO ===== -->
 <section id="about" class="tab-content active hero">
-  <!-- GLASS BOX behind the title + subtitle -->
   <div class="hero-box glassbox lift">
     <h1 class="title">Hi, I’m Somia,</h1>
     <h1 class="title">GIS/RS &amp; Data Analyst.</h1>
@@ -46,7 +45,6 @@
     </p>
   </div>
 
-  <!-- keep the rest (techline + chips + about grid) exactly as is -->
   <p class="techline">ESRI Package • QGIS • Google Earth Engine • Python • R • PostgreSQL</p>
   <div class="tags">
     <span class="tag tag-urban">Urban Change</span>
@@ -55,8 +53,6 @@
     <span class="tag tag-carto">Cartography</span>
     <span class="tag tag-auto">Automation / Dashboards</span>
   </div>
-  <!-- ...about-grid continues -->
-
 
   <div class="about-grid">
     <div class="about-left">
@@ -84,21 +80,22 @@
   </div>
 
   <div class="exp-grid">
-    <!-- cards unchanged -->
 
-    <article class="exp-card exp-green">
-      <div class="exp-top">
-        <h3>Research Associate</h3><span class="exp-dates">Present</span>
-      </div>
-      <div class="exp-org">
-        Lahore University of Management Sciences (LUMS)
-      </div>
-      <ul>
-        <li>Analyzed large datasets to map restaurant registration and compliance patterns.</li>
-        <li>Applied clustering and spatial models to identify market zones for policy targeting.</li>
-        <li>Developed an interactive dashboard for real-time monitoring and analytics.</li>
-      </ul>
-      <div class="exp-tools">
+    <!-- ITEM 1 -->
+    <div class="exp-item">
+      <article class="exp-card exp-green">
+        <div class="exp-top">
+          <h3>Research Associate</h3><span class="exp-dates">Present</span>
+        </div>
+        <div class="exp-org">Lahore University of Management Sciences (LUMS)</div>
+        <ul>
+          <li>Analyzed large datasets to map restaurant registration and compliance patterns.</li>
+          <li>Applied clustering and spatial models to identify market zones for policy targeting.</li>
+          <li>Developed an interactive dashboard for real-time monitoring and analytics.</li>
+        </ul>
+      </article>
+
+      <div class="exp-tools-card">
         <b>Tools:</b>
         <span class="chip">Python</span>
         <span class="chip">PostgreSQL</span>
@@ -106,46 +103,51 @@
         <span class="chip">ArcGIS</span>
         <span class="chip">Google Earth Engine</span>
         <span class="chip">QGIS</span>
-
       </div>
+    </div>
 
-    </article>
+    <!-- ITEM 2 -->
+    <div class="exp-item">
+      <article class="exp-card exp-blue">
+        <div class="exp-top">
+          <h3>Research Assistant</h3><span class="exp-dates">2023 — 2024</span>
+        </div>
+        <div class="exp-org">Lahore University of Management Sciences (LUMS)</div>
+        <ul>
+          <li>Conducted flood extent and impact analysis using <b>NOAA satellite imagery</b> to quantify inundated areas and affected settlements.</li>
+          <li>Performed <b>flood risk and hazard modeling</b> to assess vulnerable zones and exposure levels.</li>
+          <li>Utilized <b>Mapbox</b> and <b>GIS-based routing</b> to identify disrupted road networks and accessibility issues.</li>
+        </ul>
+      </article>
 
-    <article class="exp-card exp-blue">
-      <div class="exp-top">
-        <h3>Research Assistant</h3><span class="exp-dates">2023 — 2024</span>
-      </div>
-      <div class="exp-org">Lahore University of Management Sciences (LUMS)</div>
-      <ul>
-        <li>Conducted flood extent and impact analysis using <b>NOAA satellite imagery</b> to quantify inundated areas and affected settlements.</li>
-        <li>Performed <b>flood risk and hazard modeling</b> to assess vulnerable zones and exposure levels.</li>
-        <li>Utilized <b>Mapbox</b> and <b>GIS-based routing</b> to identify disrupted road networks and accessibility issues.</li>
-      </ul>
-      <div class="exp-tools">
+      <div class="exp-tools-card">
         <b>Tools:</b>
         <span class="chip">Google Earth Engine</span>
         <span class="chip">ArcGIS</span>
         <span class="chip">Mapbox</span>
         <span class="chip">NOAA Flood Fraction Data</span>
         <span class="chip">Arcpy - Python</span>
-      
       </div>
-    </article>
+    </div>
 
-    <article class="exp-card exp-purple">
-      <div class="exp-top">
-        <h3>GIS Associate & Officer</h3>
-        <span class="exp-dates">2021 — 2023</span>
-      </div>
-      <div class="exp-org">Richard Garstang Conservation GIS Lab | WWF-Pakistan</div>
-      <ul>
-        <li>Conducted <b>Land Use/Land Cover (LULC) classification</b> of Lahore District (1990–2020) using <b>Google Earth Engine</b> and <b>ArcGIS</b>.</li>
-        <li>Created animations and Story Maps visualizing <b>urban growth</b> and <b>Indus River Dolphin conservation</b> efforts.</li>
-        <li>Performed <b>flood extent and temporal change analysis</b> in Manchar and Hammal Lake regions using satellite imagery.</li>
-        <li>Developed <b>interactive maps and dashboards</b> for plantation monitoring and environmental reporting.</li>
-        <li>Authored geospatial content, training material, and manuals for organizational capacity building.</li>
-      </ul>
-      <div class="exp-tools">
+    <!-- ITEM 3 -->
+    <div class="exp-item">
+      <article class="exp-card exp-purple">
+        <div class="exp-top">
+          <h3>GIS Associate &amp; Officer</h3>
+          <span class="exp-dates">2021 — 2023</span>
+        </div>
+        <div class="exp-org">Richard Garstang Conservation GIS Lab | WWF-Pakistan</div>
+        <ul>
+          <li>Conducted <b>Land Use/Land Cover (LULC) classification</b> of Lahore District (1990–2020) using <b>Google Earth Engine</b> and <b>ArcGIS</b>.</li>
+          <li>Created animations and Story Maps visualizing <b>urban growth</b> and <b>Indus River Dolphin conservation</b> efforts.</li>
+          <li>Performed <b>flood extent and temporal change analysis</b> in Manchar and Hammal Lake regions using satellite imagery.</li>
+          <li>Developed <b>interactive maps and dashboards</b> for plantation monitoring and environmental reporting.</li>
+          <li>Authored geospatial content, training material, and manuals for organizational capacity building.</li>
+        </ul>
+      </article>
+
+      <div class="exp-tools-card">
         <b>Tools:</b>
         <span class="chip">Google Earth Engine</span>
         <span class="chip">ArcGIS</span>
@@ -154,7 +156,7 @@
         <span class="chip">Landsat/Sentinel/Modis</span>
         <span class="chip">MaxEnt</span>
       </div>
-    </article>
+    </div>
 
   </div>
 
@@ -190,7 +192,6 @@
 <section id="cv" class="tab-content section">
   <h2 class="section-title">CV</h2>
   <p class="subtitle">Add a downloadable PDF or timeline here.</p>
-  <!-- optional CV button -->
   <a class="techline" href="assets/Somia_Asim_CV.pdf" download>Download CV (PDF)</a>
 </section>
 
